# omnijournal-mcp

./: .gitignore  README.md  pyproject.toml  smoke_test.py
src/omnijournal/: bibliography.py  config.py  download.py  models.py  search.py  server.py
src/omnijournal/providers/: __init__.py  arxiv.py  biorxiv.py  core.py  crossref.py  dblp.py  europe_pmc.py  openalex.py  openreview.py  pubmed.py  semantic_scholar.py  unpaywall.py
tests/: test_models.py  test_search_helpers.py
